<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/pm"
    tools:context=".SignUpAct">

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pm"
        android:gravity="center"
        android:text="@string/s_signup"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/width_tv"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pm"
        app:counterEnabled="false"
        app:errorEnabled="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_un"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_1"
            android:hint="@string/s_user"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/ntext_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/width_tv"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pm"
        app:counterEnabled="false"
        app:errorEnabled="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_1"
            android:hint="@string/s_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/ntext_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/width_tv"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pm"
        app:counterEnabled="false"
        app:errorEnabled="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_1"
            android:hint="@string/s_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/ntext_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_up"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pm"
        android:backgroundTint="@color/green"
        android:text="Đăng ký"
        android:textSize="@dimen/stext_size" />

    <Button
        android:id="@+id/btn_in"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pm"
        android:backgroundTint="@color/gray"
        android:text="Đăng nhập"
        android:textSize="@dimen/stext_size" />
</LinearLayout>